--- a/blogpost.html
+++ b/blogpost.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Título del post</h1>
-    <p>Este es el contenido del párrafo</p>
+    <div class="container">
+        <div>
+            <h1>Título del post</h1>
+            <p>Este es una parte donde van a surgir ideas muy brillantes</p>
+        </div>
+    </div>
     
 </body>
 </html>
