--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="container">
+        <div class="cabecera">
+            <h2>Cabecera</h2>
+        </div>
         <div>
             <h1>Título del post</h1>
             <p>Este es una parte donde van a surgir ideas muy brillantes</p>
