--- a/blogpost.html
+++ b/blogpost.html
@@ -9,9 +9,9 @@
 <body>
     <div class="container">
         <div class="cabecera">
-            <h2>Cabecera</h2>
+            <h2 >Cabecera</h2> <span class="tagline">SuperBlog</span>
         </div>
-        <div>
+        <div class="texto">
             <h1>Título del post</h1>
             <p>Este es una parte donde van a surgir ideas muy brillantes</p>
         </div>
