--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,7 @@
         <div>
             <h1>Título del post</h1>
             <p>Este es una parte donde van a surgir ideas muy brillantes</p>
+            <p>Estos blogs permiten compartir ideas fabulosas para tener un punto de vista diferente al tuyo </p>
         </div>
     </div>
     
