--- a/blogpost.html
+++ b/blogpost.html
@@ -9,12 +9,13 @@
 <body>
     <div class="container">
         <div class="cabecera">
-            <h2 >Cabecera</h2> <span class="tagline">SuperBlog</span>
+            <h2 >Cabecera</h2> <span class="tagline">Maestro</span>
         </div>
         <div class="texto">
             <h1>Título del post</h1>
             <p>Este es una parte donde van a surgir ideas muy brillantes</p>
             <p>Estos blogs permiten compartir ideas fabulosas para tener un punto de vista diferente al tuyo </p>
+            <p>Suscribite papaaaa</p>
         </div>
     </div>
     
