--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
+
+    <div >
+        <button id="login">Acceder</button>
+    </div>
+
     <div class="container">
         <div class="cabecera">
             <h2 >Cabecera</h2> <span class="tagline">HyperBlog</span>
@@ -18,6 +23,6 @@
             <p>Suscribite papaaaa</p>
         </div>
     </div>
-    
+    <script src="js/index.js"></script>
 </body>
 </html>
