--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,7 @@
 
     <div class="container">
         <div class="cabecera">
-            <h2 >Cabecera</h2> <span class="tagline">HyperBlog</span>
+            <h2 >Header</h2> <span class="tagline">HyperBlog</span>
         </div>
         <div class="texto">
             <h1>Título del post</h1>
