--- a/blogpost.html
+++ b/blogpost.html
@@ -23,6 +23,7 @@
             <p>Suscribite papaaaa</p>
         </div>
     </div>
+    <footer>Todos los derechos reservados</footer>
     <script src="js/index.js"></script>
 </body>
 </html>
