Agregando estilos al footer

--- a/blogpost.html
+++ b/blogpost.html
@@ -23,7 +23,7 @@
             <p>Suscribite papaaaa</p>
         </div>
     </div>
-    <footer>Todos los derechos reservados</footer>
+    <footer class="footer">Todos los derechos reservados &infintie;</footer>
     <script src="js/index.js"></script>
 </body>
 </html>
